--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
@@ -21,6 +22,7 @@
     "swiper": "^11.1.14"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
