--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@tsparticles/slim": "^3.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.1",
+    "embla-carousel-react": "^8.5.1",
     "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.439.0",
